umol-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@functional_groups_aliphatic_methanediol.snap
---
source: umol-graph/tests/resolution/mod.rs
expression: "results.to_edn().to_string_with(&FormatConfig::default())"
---
{
  :atom-typing-most-saturated {
    :output {:atoms ["C#h2" "O#h#n2" "O#h#n2"] :bonds [[0 1 :single] [0 2 :single]]}
    :success true
    :tie-breaks [0 1 2]}
  :atom-typing-strict {
    :success false
    :tie-breaks []
    :unresolved {
      0 [
        "C#h2#v2#d0#t0#a!#m!"
        "C#h#u#v2#d0#t0#a!#m!"
        "C#u2#v2#d0#t0#a!#m!"
        "C#n#v2#d0#t0#a!#m!"]
      1 ["O#h#n2#v#d0#t0#a!#m!" "O#n2#u#v#d0#t0#a!#m!"]
      2 ["O#h#n2#v#d0#t0#a!#m!" "O#n2#u#v#d0#t0#a!#m!"]}}
  :counts-most-saturated {
    :output {:atoms ["C#h2" "O#h#n2" "O#h#n2"] :bonds [[0 1 :single] [0 2 :single]]}
    :success true
    :tie-breaks [0 1 2]}
  :counts-strict {
    :success false
    :tie-breaks []
    :unresolved {
      0 ["C#n#v2#a!" "C#h#u#v2#a!" "C#h2#v2#a!"]
      1 ["O#n2#u#v#a!" "O#h#n2#v#a!"]
      2 ["O#n2#u#v#a!" "O#h#n2#v#a!"]}}}
